--- a/css/style.css
+++ b/css/style.css
@@ -98,14 +98,6 @@ img, video, audio {
   background: #ccc;
 }
 
-[class*="col-"] {
-  margin-left: 2%;
-}
-
-.first {
-  margin-left: 0%;
-}
-
 .clearfix:after {
   content: ".";
   display: block;
@@ -114,3 +106,13 @@ img, video, audio {
   height: 0;
   line-height: 0;
 }
+
+[class*="col-"] {
+  margin-left: 2%;
+}
+
+.first {
+  margin-left: 0%;
+}
+
+/* SECTIONS */
