--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,13 @@ img, video, audio {
 }
 
 /* LAYOUT */
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .wrapper {
   width: 960px;
   margin: 0 auto;
