automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -93,11 +93,13 @@ img, video, audio {
 .col-1 {
   float: left;
   margin: 32%;
+  background: #ccc;
 }
 
 .col-2 {
   float: left;
   margin: 66%;
+  background: #ccc;
 }
 
 .col-3 {
