--- a/css/style.css
+++ b/css/style.css
@@ -92,13 +92,13 @@ img, video, audio {
 
 .col-1 {
   float: left;
-  margin: 32%;
+  width: 32%;
   background: #ccc;
 }
 
 .col-2 {
   float: left;
-  margin: 66%;
+  width: 66%;
   background: #ccc;
 }
 
